--- a/main.css
+++ b/main.css
@@ -60,19 +60,22 @@ small {
 	
 }
 
+#jbtitle {
+  	font-family: 'Monoton';
+  	text-shadow: 2px 2px 8px #300;
+  	font-size: 16vw;
 
+}
 
-#jbtext	{
+.jbtoplevel	{
 	text-align: right;
 	color: white;
 	margin: 5%;
-  	font-family: 'Monoton';
-  	font-size: 10vw;
+
   	position: absolute;
  	right: 1px;
  	top: 1px;
 }
-
 
 ul {
     list-style-type: none;
@@ -92,7 +95,6 @@ li a {
     text-decoration: none;
 }
 
-
 #titlepage {
 	margin-right: 0px;
 	margin-left: -15px;
@@ -107,7 +109,6 @@ hr	{
     margin-right: auto;
 }
 
-
 /*content with bootstrap*/
 nav {
       background-color: #f2f2f2;
@@ -119,13 +120,11 @@ nav {
     }
 /*footer*/   
 
-
 #ftimg	{
 	text-align: right;
 }
 
 /* Read-only pages*/
-
 		
 img.bottom-margin {
 	margin-bottom: 1em;
