--- a/main.css
+++ b/main.css
@@ -46,11 +46,26 @@ small {
 	font-style: italic;
 }
 
+hr	{
+	color: #330000;
+	display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#titlepage {
+	margin-right: 0px;
+	margin-left: -15px;
+}
+
 #type {
 	font-family: 'Roboto,' sans-serif;
 }
 
 /*jumbotron contents*/
+
 .jumbotron {
 	background-color: #FFFFFF;
 	min-height: 25vmin;
@@ -64,19 +79,17 @@ small {
   	font-family: 'Monoton';
   	text-shadow: 2px 2px 8px #300;
   	font-size: 16vw;
-
 }
 
 .jbtoplevel	{
 	text-align: right;
-	color: white;
-	margin: 5%;
-
+	color: white;	margin: 5%;
   	position: absolute;
  	right: 1px;
  	top: 1px;
 }
 
+/*Navbar stuff?
 ul {
     list-style-type: none;
     margin: 0;
@@ -95,21 +108,9 @@ li a {
     text-decoration: none;
 }
 
-#titlepage {
-	margin-right: 0px;
-	margin-left: -15px;
-}
+*/
 
-hr	{
-	color: #330000;
-	display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-/*content with bootstrap*/
+/*Bootstrap Content*/
 nav {
       background-color: #f2f2f2;
       height: 25px;
