--- a/main.css
+++ b/main.css
@@ -7,181 +7,172 @@ White:  #FFFFFF
 Burnt Orange:  #C84127 !can't carry blue as text
 Brown #330000 ! accent only */ 	
 
-body	{	
-	background-color: #CDB99C;
+
+body {background-color: #CDB99C;}
+
+h1		{font-family: 'Codystar';}
+
+h2	{font-family: 'Monoton';}
+
+h3 {font-family: 'Lobster';}
+
+h4 {
+		font-family: 'Playfair Display';
+		font-weight: 400;
+		font-style: italic;
 }
 
-
-h1 {
-	font-family: 'Codystar';
-}
-
-h2	{
-	font-family: 'Monoton';
-}
-
-h3	{
-	font-family: 'Lobster'
-}
-
-h4	{
-	font-family: 'Playfair Display';
-	font-weight: 400;
-	font-style: italic;
-}
-
-p {
-	font-family: 'Lobster';
-	font-size: 14px;
-}
+p {font-family: 'Lobster'; font-size: 20px;}
 
 h1.blogtitle {
-	font-family: 'Codystar';
-	color:#FFFFFF;
-	font-size: 60px;
+		font-family: 'Codystar';
+	 color:#FFFFFF;
+	 font-size: 60px;
 }
 
-h4.blogtitleds	{
+/*h4.blogtitleds	{
 	;
+} */
+
+h1.blogsubtitle {
+		font-family: 'Playfair Display';
+		font-size: 27px;
+		font-style: italic;
 }
 
-h1.blogsubtitle	{
-	font-family: 'Playfair Display';
-	font-size: 27px;
-	font-style: italic;
-	/*font-style: bold; 
-	font-weight: 500; */
+h4.blogsubds {
+		font-style: 'Playfair Display';
+		font-style: normal;
 }
 
-h4.blogsubds	{
-	font-style: 'Playfair Display';
-	font-style: normal;
+iframe {
+		opacity: 0.5;
+		margin-top:;
+		margin-bottom: 5px;
 }
 
 article {
-	font-family: 'Roboto', sans-serif;
-	text-align: justify;
+		font-family: 'Roboto', sans-serif;
+		text-align: justify;
+		font-size: 16px;
 }
+
+article.gombaseind {font-size: 14px;}
 
 small {
-	font-family: 'Playfair Display';
-	font-weight: 900;
-	font-style: italic;
+		font-family: 'Playfair Display';
+		font-weight: 900;
+		font-style: italic;
 }
 
-.detail {
-	color: white;
+.detail {color: white;}
+
+ul.a {list-style-type: circle;}
+
+figcaption {font-family: 'Playfair Display';}
+
+border-top-right-radius: {
+		color: #330000;
+		display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-ul.a {
-	list-style-type: circle;
-}
+/*Links*/
+a:link {color: black;}
 
-figcaption {
-	font-family: 'Playfair Display';
-}
-
-hr	{
-	color: #330000;
-	display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-a:link {
-	color: black;
+a:visited {
+		text-decoration: underline;
+		text-decoration-color:#C84127;
 }
 
 a:hover {
-	text-decoration: underline;
-	text-decoration-color: yellow;
+		text-decoration: underline;
+		text-decoration-color: yellow;
 }
 
+p.indshort {line-height: 400%;}
 
-#titlepage {
-	margin-right: 0px;
-	margin-left: -15px;
-}
+#titlepage {margin-right: 0px; margin-left: -15px;}
 
-#type {
-	font-family: 'Roboto,' sans-serif;
-}
+#type {font-family: 'Roboto,' sans-serif;}
 
 /*jumbotron contents*/
 
 .jumbotron {
-	background-color: #FFFFFF;
-	min-height: 25vmin;
-	opacity: 0.7;
-	padding-top: 0;
-	padding-bottom: 0;
-	
+		background-color: #FFFFFF;
+		min-height: 25vmin;
+		opacity: 0.7;
+		padding-top: 0;
+		padding-bottom: 0;
 }
 
 #jbtitle {
-  	font-family: 'Monoton';
-  	text-shadow: 2px 2px 8px #300;
-  	font-size: 16vw;
+		font-family: 'Monoton';
+  text-shadow: 2px 2px 8px #300;
+  font-size: 16vw;
 }
 
-.jbtoplevel	{
-	text-align: right;
-	color: white;	margin: 5%;
-  	position: absolute;
+.jbtoplevel {
+		text-align: right;
+		color: white;	margin: 5%;
+  position: absolute;
  	right: 1px;
  	top: 1px;
 }
 
-/*  Navbar */
+/*Temporary Features Styling*/
+
+.tempnav {
+		color: #C84127;
+}
+/* Navbar */
 .menu {
-	background-color: rgba(205,185,156,0.5);
-	padding: 15px;
-	position: fixed;
-	z-index: 2;
-	top: 0;
-	left: 0;
-	font-size: 30px;
-	cursor: pointer;
+		background-color: rgba(205,185,156,0.5);
+		padding: 15px;
+		position: fixed;
+		z-index: 2;
+		top: 0;
+		left: 0;
+		font-size: 30px;
+		cursor: pointer;
 }
 
 .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #CDB99C;
-    font-family: 'Playfair Display'; 
-    font-style: italic;
-    font color: black;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 70px;
+		height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #CDB99C;
+  font-family: 'Playfair Display'; 
+  font-style: italic;
+  font color: black;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 70px;
 }
 
 .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
+		padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
 }
 
-.sidenav a:hover, .offcanvas a:focus{
-    color: #f1f1f1;
-}
+.sidenav a:hover, .offcanvas a:focus{color: #f1f1f1;}
 
 .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
+		position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
 @media screen and (max-height: 450px) {
@@ -189,29 +180,26 @@ a:hover {
   .sidenav a {font-size: 18px;}
 }
 
-
-.ftimg	{
-	float: right;
+/*Experimental
+#swell {
+    font-size: 30px;
+    transition: width 2s;
+    -webkit-transition: width 2s;
 }
+
+#swell:hover {
+    width: 35px;
+}
+
+a.bug {
+	color: black;
+} */
 
 /*Bootstrap Content*/
 nav {
-      background-color: #f2f2f2;
-      height: 25px;
-      padding: 0px;
-      margin-right: -15px;
-      background-color: #ffffff;
-     
-    }
-/*footer  
-
-#ftimg	{
-	text-align: right;
-}
-
-*/ 
-/* Read-only pages*/
-		
-img.bottom-margin {
-	margin-bottom: 1em;
+		background-color: #f2f2f2;
+  height: 25px;
+  padding: 0px;
+		margin-right: -15px;
+		background-color: #ffffff;
 }
