--- a/features.css
+++ b/features.css
@@ -1,5 +1,41 @@
+/*UX and content fundamentals */
+
+/* Reference Colors 
+Blue:  #3399CC 	!can't carry orange as text
+Beige: #CDB99C  			
+White:  #FFFFFF 			
+Burnt Orange:  #C84127 !can't carry blue as text
+Brown #330000 ! accent only */ 
+
+.jumbotron {
+	width: 100%;
+	height: auto;
+	padding-top: 0;
+	padding-bottom: 0;
+	/* min-height: 25vmin; */
+}
+
+.sidenav {
+		height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #CDB99C;
+  font-family: 'Playfair Display'; 
+  font-style: italic;
+  font color: black;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 70px;
+}
+
+.navbartext {
+	text-align: right;
+}
 body	{
-	background-color: #CDB99C;
+	background-color: white;
 	margin-right: 20%;
 	margin-left: 20%;
 	margin-top: 5%;
@@ -18,9 +54,14 @@ h4	{
 
 h5	{
 	font-family: 'Playfair Display';
-	font-style: italic;
+	font-style: italic; 
+	font-style: bold; 
+	color: #C84127;
+	font-size: 18px;
 }
 article {
 	font-family: 'Roboto', sans-serif;
 	text-align: justify;
+	font-size: 16px;
+
 }
